# archestra

./: EXTERNAL_CONTRIBUTORS.md  README.md
.claude/skills/archestra-dev-backend-tests/: SKILL.md
.claude/skills/archestra-dev-e2e/: SKILL.md
.claude/skills/archestra-dev-frontend/: SKILL.md
.claude/skills/archestra-dev-interactions-migrations/: SKILL.md
.claude/skills/archestra-dev-llm-providers/: SKILL.md
.claude/skills/archestra-dev-migrations/: SKILL.md  resolve-conflicts.md
.claude/skills/archestra-dev-observability/: SKILL.md
.claude/skills/archestra-dev-rust-napi/: SKILL.md
.claude/skills/archestra-docs-writer/: SKILL.md
.github/: values-ci.yaml  values-staging.yaml
.github/actions/setup-archestra-platform/: action.yml
.github/actions/setup-env/: action.yml
.github/bench/: README.md  job.yaml
.github/release-please/: .release-please-manifest.json
.github/workflows/: build-base-mcp-server-docker-image.yml  build-sandbox-base-docker-image.yml  claude-coreteam-mentions-shared.yml  on-commits-to-main.yml  on-pull-requests.yml  platform-e2e-tests.yml  release-please.yml  trigger-website-deploy-on-catalog-changes.yml
ai-labs/: .gitignore  CLAUDE.md  Cargo.toml  README.md  lanes.toml
ai-labs/analyzer/: Cargo.toml
ai-labs/analyzer/src/: analyze.rs  lib.rs  rubric.rs
ai-labs/baton/: .dockerignore  README.md  baton-authority-model-design.md  baton-declassifier-design.md
ai-labs/baton/agentdojo-harness/: README.md
ai-labs/baton/baton-approver-demo/: Cargo.toml  README.md  policy.toml  run-demo.sh
ai-labs/baton/baton-approver-demo/src/: approval.rs  lib.rs
ai-labs/baton/baton-check/: Cargo.toml
ai-labs/baton/baton-check/src/: main.rs  protocol.rs
ai-labs/baton/baton-contracts/: Cargo.toml
ai-labs/baton/baton-contracts/src/: lib.rs
ai-labs/baton/baton-core/: CLAUDE.md  Cargo.toml
ai-labs/baton/baton-demo/: APPROVER.md  Cargo.toml  README.md  gateway-policy.toml  gateway.toml  run-approver-demo.sh  run-gateway-demo.sh
ai-labs/baton/baton-demo/src/: approval.rs  demo_support.rs  lib.rs
ai-labs/baton/baton-demo/src/gateway/: config.rs  mod.rs  narrate.rs  session.rs
ai-labs/baton/baton-demo/tests/: gateway_session.rs
ai-labs/baton/baton-dojo/: Cargo.toml  README.md
ai-labs/baton/baton-dojo/src/: agent.rs  error.rs  lib.rs  main.rs  model.rs  policy.rs  scoring.rs  suite.rs  tool.rs
ai-labs/baton/baton-dojo/src/scenarios/: auditor_email.rs  mod.rs  recording_bug_filing.rs
ai-labs/baton/baton-proxy/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md
ai-labs/baton/baton-proxy/src/: config.rs  lib.rs  replay.rs  rewrite.rs
ai-labs/baton/demo/kagent/notify-mcp/: Cargo.toml  Dockerfile
ai-labs/baton/demo/kagent/notify-mcp/src/: main.rs
ai-labs/baton/docs/: contracts.md
ai-labs/cli/: Cargo.toml
ai-labs/cli/src/: main.rs
ai-labs/core/: Cargo.toml
ai-labs/core/src/: lib.rs
ai-labs/dashboard/: Cargo.toml
ai-labs/dashboard/src/: lib.rs
ai-labs/dashboard/tests/: dashboard.rs
ai-labs/envs/: basic.toml
ai-labs/runner/: Cargo.toml
ai-labs/runner/src/: client.rs  elicitation.rs  fixture_mcp.rs  interactions.rs  lifecycle.rs  mcp_server.rs  run.rs  verify.rs
ai-labs/runner/tests/: envs_load.rs  integration.rs
ai-labs/tasks/it-ticket-status/: task.toml  verifier.py
archestra-bench/: README.md
archestra-bench/analyzer/src/: analyze.rs
archestra-bench/dashboard/src/: load.rs  views.rs
archestra-bench/runner/src/: client.rs  lib.rs  lifecycle.rs  mcp_server.rs  run.rs
docs/pages/: mcp-authentication.md  platform-access-control.md  platform-adding-knowledge-connectors.md  platform-adding-llm-providers.md  platform-agent-hooks.md  platform-agent-skills-sharing.md  platform-agent-skills.md  platform-agent-triggers-webhook-a2a.md  platform-agents.md  platform-api-reference.md  platform-apps.md  platform-archestra-mcp-server.md  platform-chat.md  platform-claude-code-example.md  platform-code-sandbox.md  platform-connection.md  platform-costs-and-limits.md  platform-deployment.md  platform-environments.md  platform-knowledge-bases.md  platform-knowledge.md  platform-llm-proxy-authentication.md  platform-llm-proxy.md  platform-migration-kit.md  platform-ms-teams.md  platform-n8n-example.md  platform-observability.md  platform-private-registry.md  platform-projects.md  platform-pydantic-example.md  platform-quickstart.md  platform-reset-user-password.md  platform-secrets-management.md  platform-slack.md  platform-sso-team-sync.md  platform-sso.md  platform-supported-llm-providers.md  platform-telegram.md  platform-vercel-ai-example.md
mcp-catalog/: README.md
mcp-catalog/data/: mcp-servers.json
mcp-catalog/data/mcp-evaluations/: 0xdaef0f__job-searchoor.json  0xshellming__mcp-summarizer.json  13bm__ghidramcp.json  21st-dev__magic-mcp.json  2niuhe__plantuml_web.json  2niuhe__qrcode_mcp.json  (+900 more)
migration-kit/references/: entity-mapping.md
platform/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  PROVIDER_SMOKE_TEST.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
platform/archestra-rs/: Cargo.toml
platform/backend/: package.json  tsdown.config.ts
platform/dev/: Tiltfile.dev  run-renderer-dev.sh
platform/e2e-tests/: README.md  consts.ts  playwright.config.ts
platform/frontend/: next.config.ts  package.json  vitest.config.ts
platform/mcp_server_docker_image/: Dockerfile  package-lock.json  package.json  pyproject.toml
platform/patches/: opus-decoder@0.7.11.patch
platform/scripts/: e2e-lite-platform.env  e2e-lite.sh
platform/shared/: access-control.test.ts  access-control.ts  agents.test.ts  agents.ts  api-error.test.ts  api-error.ts  app-gallery-categories.ts  app-recording.test.ts  app-recording.ts  archestra-mcp-server.test.ts  archestra-mcp-server.ts  cascade-scenarios.ts  chat-error.ts  chat.test.ts  chat.ts  consts.test.ts  consts.ts  docs.ts  e2e-test-ids.ts  index.ts  knowledge-base.ts  mcp-orchestrator.ts  mcp-tool-error.test.ts  mcp-tool-error.ts  model-constants.test.ts  model-constants.ts  package.json  permission.types.ts  routes.ts  types.ts  websocket.ts
(+1227 files in other folders)
