[package]
name = "baton-approver-demo"
version = "0.1.0"
edition = "2024"
publish = false
description = "Human-in-the-loop approval demo for baton-proxy (PARKED: pending the External-authority port; does not build against current baton-core)"

# Standalone on purpose, like the sibling baton crates.
[workspace]

[dependencies]
baton-core = { path = "../baton-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std", "net"] }
rmcp = { version = "1.7", features = [
    "server",
    "client",
    "macros",
    "elicitation",
    "transport-streamable-http-server",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
] }
rig-core = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }

[[bin]]
name = "baton-approver"
path = "src/bin/approver.rs"

[[bin]]
name = "baton-demo-agent"
path = "src/bin/demo_agent.rs"
