[package]
name = "baton-demo"
version = "0.1.0"
edition = "2024"
publish = false
description = "Ad-hoc demo harnesses for the baton prototype: the tool-layer MCP gateway (built) and the parked inference-layer approval flow"
autobins = false

# Standalone on purpose, like the sibling baton crates — and deliberately out
# of the shared ai-labs workspace, to keep the heavy demo deps (a full agent
# framework and LLM client) out of the workspace build.
[workspace]

[features]
default = []
# The parked human-in-the-loop approval demo. It compiles, but does not run
# end-to-end: the flow needs the approval-rewriting `baton-proxy` behavior that
# no longer exists (the proxy now blocks fail-closed). Gated off by default so
# the standard build only produces the working gateway bins.
approver = []

[dependencies]
baton-core = { path = "../baton-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std", "net"] }
axum = "0.8"
rmcp = { version = "1.7", features = [
    "server",
    "client",
    "macros",
    "elicitation",
    "transport-streamable-http-server",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
] }
rig-core = { version = "0.39", features = ["rmcp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
thiserror = "2"

[[bin]]
name = "baton-gateway"
path = "src/bin/gateway.rs"

[[bin]]
name = "baton-gateway-agent"
path = "src/bin/gateway_agent.rs"

# Parked (see the `approver` feature).
[[bin]]
name = "baton-approver"
path = "src/bin/approver.rs"
required-features = ["approver"]

[[bin]]
name = "baton-demo-agent"
path = "src/bin/demo_agent.rs"
required-features = ["approver"]
