[package]
name = "baton-proxy"
version = "0.1.0"
edition = "2024"
publish = false
description = "Inference-layer proxy that blocks tool calls failing their baton contract, over baton-core"

[dependencies]
baton-core = { path = "../baton-core" }
baton-contracts = { path = "../baton-contracts" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std", "net"] }
axum = "0.8"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"

[lints]
workspace = true

[[bin]]
name = "baton-proxy"
path = "src/bin/proxy.rs"
