[package]
name = "notify-mcp"
version = "0.1.0"
edition = "2024"
publish = false
description = "Webhook-notify MCP tool for the kagent demo: POSTs a message to a URL"

# Standalone on purpose, like the sibling baton crates.
[workspace]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
rmcp = { version = "1.7", features = ["server", "transport-streamable-http-server"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
